--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -3,7 +3,7 @@
   <span class="spacer"></span>
   <ul>
     <li>
-      <a routerLink="/create">Create Post</a>
+      <a mat-button routerLink="/create" routerLinkActive="mat-accent">Create Post</a>
     </li>
   </ul>
 </mat-toolbar>
