--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -5,7 +5,7 @@
     </mat-expansion-panel-header>
     <p>{{post.content}}</p>
     <mat-action-row>
-      <button mat-button color="primary">EDIT</button>
+      <a mat-button color="primary" [routerLink]="['/edit/', post.id]">EDIT</a>
       <button (click)="deletePost(post.id)" mat-button color="warn">DELETE</button>
     </mat-action-row>
   </mat-expansion-panel>
