--- a/src/app/posts/post-list/post-list.component.scss
+++ b/src/app/posts/post-list/post-list.component.scss
@@ -12,10 +12,14 @@ mat-spinner {
 }
 
 .post-image {
-  width: 100%;
+  display: flex;
+  justify-content: center;
+  // max-height: 15rem;
+  // width: 100%;
 }
 
 .post-image img {
-  width: 100%;
+  // width: 100%;
+  max-height: 15rem;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
