--- a/src/app/posts/post-list/post-list.component.scss
+++ b/src/app/posts/post-list/post-list.component.scss
@@ -11,6 +11,10 @@ mat-spinner {
   margin: auto;
 }
 
+mat-paginator {
+  margin-top: 1rem;
+}
+
 .post-image {
   display: flex;
   justify-content: center;
